# agentimagesearch

./: CLAUDE.md  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
imgfind/: __init__.py  api.py  cc_search.py  cli.py  config.py  engine.py  feedback.py  mcp_server.py  models.py  router.py  search.py
imgfind/ranking/: __init__.py  aesthetic.py  blend.py  clip_scorer.py  dedup.py  grid_rerank.py  image_cache.py  pipeline.py  technical.py  vision_rerank.py
imgfind/sources/: __init__.py  base.py  brave.py  browser.py  crawl.py  drive.py  duckduckgo.py  gallery.py  pexels.py  serpapi.py  wikimedia.py
imgfind/storage/: __init__.py  assets.py  db.py
imgfind/ui/: server.py  terminal.py
imgfind/ui/static/: app.js  index.html  style.css
