[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imgfind"
version = "0.1.0"
description = "Autonomous image discovery and retrieval agent"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "httpx>=0.27",
    "pillow>=10.0",
    "imagehash>=4.3",
    "gallery-dl>=1.27",
    "open-clip-torch>=2.26",
    "pyiqa>=0.1.12",
    "aesthetic-predictor-v2-5>=0.2",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "jinja2>=3.1",
    "anthropic>=0.40",
    "google-api-python-client>=2.150",
    "google-auth-oauthlib>=1.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
browser = ["browser-use>=0.2", "crawl4ai>=0.4"]
all = ["imgfind[browser]"]

[project.scripts]
imgfind = "imgfind.cli:app"
