[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imgfind"
version = "0.2.0"
description = "Best AI Image Search"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pillow>=10.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
ddgs = ["ddgs>=9.0"]
all = ["imgfind[anthropic,ddgs]"]
