[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentimagesearch"
version = "0.2.0"
description = "Image search for AI agents that actually see what they recommend"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pillow>=10.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
ddgs = ["ddgs>=9.0"]
api = ["fastapi>=0.115", "uvicorn>=0.32"]
mcp = ["mcp>=1.0"]
all = ["agentimagesearch[anthropic,ddgs,api,mcp]"]
